[tool.poetry]
name = "varst"
version = "0.1.0"
description = "Replace substitutions in rst files with variables."
authors = ["Jeonghun-Ban <junghoon.ban@gmail.com>"]
maintainers = ["Jeonghun-Ban <junghoon.ban@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/junghoon-vans/varst"
keywords = ["rst", "reST", "reStructuredText", "replace", "substitution"]
classifiers = [
    "Environment :: Console",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing",
]
packages = [
    { include = "varst" },
]


[tool.poetry.dependencies]
python = "^3.7"


[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]
