[tool.poetry]
name = "varst"
version = "0.1.0"
description = "Replace substitutions in rst files with variables."
authors = ["Jeonghun-Ban <junghoon.ban@gmail.com>"]
maintainers = ["Jeonghun-Ban <junghoon.ban@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/junghoon-vans/varst"
keywords = ["rst", "reST", "reStructuredText", "replace", "substitution"]
classifiers = [
    "Environment :: Console",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing",
]
packages = [
    { include = "varst" },
]

[tool.poetry.scripts]
varst = 'varst.cli:main'

[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool]
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
]
