[tool.poetry]
name = "varst"
version = "1.2.1"
description = "Replace substitutions in rst files with variables."
authors = ["Jeonghun-Ban <junghoon.ban@gmail.com>"]
maintainers = ["Jeonghun-Ban <junghoon.ban@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/junghoon-vans/varst"
documentation = "https://varst.readthedocs.io/"
keywords = ["rst", "reST", "reStructuredText", "replace", "substitution"]
classifiers = [
    "Environment :: Console",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing",
]
packages = [
    { include = "varst" },
]

[tool.poetry.scripts]
varst = 'varst.cli:main'

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
tox = "^3.27.0"


[tool.poetry.group.docs.dependencies]
sphinx = "^5.3.0"
furo = "^2022.9.29"
readthedocs-sphinx-search = "^0.1.2"
myst-parser = "^0.18.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool]
[tool.commitizen]
name = "cz_conventional_commits"
version = "1.2.1"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
]
